fixed image cropping bug on narrow viewports

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -189,17 +189,24 @@ small {
 	overflow: hidden;
 	z-index: 50;
 }
-#modal-inner .flex-viewport img {	
-	margin: 0 auto 50px;
+#modal-inner .flex-viewport{	
 	height: 55vh;
+	overflow: scroll;
+}
+#modal-inner .flex-viewport img{
+	margin: 0 auto 50px;
+	vertical-align: bottom;
+	height: auto;
+	max-height: 55vh;	
 	width: auto;
+	max-width: 100%;
 }
 #modal-inner .flex-control-nav{
 	overflow-y: scroll;
 	white-space: nowrap; 
 	margin: 0 auto;
 	width: 100%;
-	max-height: 35vh;
+	max-height: 40vh;
 }
 #modal-inner .flex-control-nav li{
 	width: 6.25%;
